# Qobuz-Player

./: .gitignore  README.md  build-menu.cmd  build-menu.ps1
.scanoss/: scanoss-raw.json
Supporting_material/: colors.psd  colors.xlsm
src-tauri/: Cargo.toml  settings.html  tauri.conf.json  thumbar-listener-example.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  settings.rs  thumbar.rs  window_manager.rs
