[package]
name = "qobuz-player"
version = "0.1.2"
description = "Web Container for Qobuz Web Player"
authors = ["Leonardo Calé"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qobuz_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = {version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi"
]}
raw-window-handle = "0.6.2"

[profile.release]
opt-level = "z"        # optimize for size (instead of speed)
lto = true             # enable link-time optimization
codegen-units = 1      # better optimization, smaller binary
strip = true           # remove debug symbols
panic = "abort"        # smaller binary, no unwinding

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
