[package]
name = "qobuz-player"
version = "0.2.1"
description = "Web Container for Qobuz Web Player"
authors = ["Leonardo Calé"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qobuz_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
windows = {version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    # WinRT features used by the session-publisher
    "Media_Control",
    "Media_Playback",
    "Foundation",
    "Foundation_Collections"
] }
raw-window-handle = "0.6.2"
tauri-plugin-media = "0.1.1"
# windows-future removed — no WinRT session monitor used when following the renderer-driven approach

[profile.release]
opt-level = "z"        # optimize for size (instead of speed)
lto = true             # enable link-time optimization
codegen-units = 1      # better optimization, smaller binary
strip = true           # remove debug symbols
panic = "abort"        # smaller binary, no unwinding

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.6"
